# bering-expedition-site

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/admin-django/: Dockerfile  init_admin.py  manage.py  requirements.txt
apps/admin-django/bering_admin/: asgi.py  settings.py  wsgi.py
apps/admin-django/content/: admin.py  models.py  seed.py
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py
apps/backend/app/models/: __init__.py  catalog.py
apps/backend/app/schemas/: catalog.py
apps/backend/app/scripts/: seed_catalog.py
apps/backend/tests/: test_healthcheck.py
apps/docs/: Dockerfile  docusaurus.config.ts  sidebars.ts
apps/docs/docs/: admin-guide.md  api.md  architecture.md  content-guidelines.md  content-model.md  intro.mdx
apps/docs/src/css/: custom.css
apps/docs/src/pages/: index.module.css  index.tsx
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/components/: AdminCms.tsx  BeringQuiz.tsx  InteractiveMap.tsx  LeafletMapContent.tsx  PhotoGrid.tsx  SourcesCatalog.tsx
apps/web/src/data/: bering.ts  expeditionNarratives.ts  firstExpeditionRoute.ts  photoCollections.ts  secondExpeditionRoute.ts
apps/web/src/lib/: catalog.ts
docs/: api.md  content-guidelines.md  content-model.md
(+7 files in other folders)
