[project]
name = "bering-backend"
version = "0.1.0"
description = "FastAPI backend for the Bering expedition site"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "sqlalchemy>=2.0,<2.1",
    "pydantic-settings>=2.9,<2.10",
    "psycopg[binary]>=3.2,<3.3",
    "alembic>=1.15,<1.16",
    "greenlet>=3.2,<3.3",
]

[project.optional-dependencies]
dev = [
    "black>=25.1,<25.2",
    "mypy>=1.15,<1.16",
    "pytest>=8.3,<8.4",
    "httpx>=0.28,<0.29",
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.core", "app.db", "app.models", "app.schemas"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
warn_unused_configs = true
